# tree-sitter-polar

./: .editorconfig  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file.polar  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.polar  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_polar/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  operators.txt  parameters.txt  resources.txt  rule_expressions.txt  string_literals.txt  tests.txt
test/highlight/: full.polar
