[package]
name = "tree-sitter-polar"
description = "OsoHq Polar grammar for tree-sitter"
version = "0.1.0"
authors = ["František Maša <frantisekmasa1@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "polar"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/fmasa/tree-sitter-polar"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
